# asciinema-editor

./: Cargo.toml  README.md
examples/: example.cast  example_save.cast  example_t1.cast  yippee_original.cast
src/: asciicast_egui.rs  cast.rs  cast_parsing.rs  cast_read.rs  cast_write.rs  main.rs  scroll.rs
