[package]
name = "asciinema-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
eframe = "0.29.1"
egui-toast = "0.15.0"
egui_extras = {"version" = "0.29.1", "features" = ["gif"]}
egui_file = "0.19.0"
image = {"version" = "0.25.4", "features" = ["gif"]}
memmap = "0.7.0"
serde = "1.0.214"
serde_json = "1.0.132"
